shorten days of week names and change font size

--- a/index.html
+++ b/index.html
@@ -10,11 +10,25 @@
 	<title>Document</title>
 </head>
 <body>
-	<div class="container mt-5 pt-5">
-		<div class="row mx-auto">
-			<div class="col calendar">
-	
+	<!-- <div class="container mt-5 pt-5">
+		<div class="row text-center">
+			<div class="col">
+				<h1 id="monthName" class="mb-3"></h1>
 			</div>
+		</div>
+		<div class="row mx-auto text-center">
+			<div class="col calendar"></div>
+		</div>
+	</div> -->
+
+	<div class="container mt-5 pt-5">
+		<div class="row text-center">
+			<div class="col">
+				<h1 id="monthName" class="mb-3"></h1>
+			</div>
+		</div>
+		<div class="row mx-auto text-center w-25">
+			<div class="col calendar border border-dark"></div>
 		</div>
 	</div>
 
